# python-projects

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINTING.md  README.md  README_GAPS.md  SECURITY.md  TODO.md  activate_venv.ps1  activate_venv.sh  cspell.json  install_venv.ps1  install_venv.sh  lint.sh  problems.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup_workspace.ps1  visit_status_report_threecol.py
common_config/: README.md  pyproject.toml
common_config/src/common_config/: __init__.py  __main__.py
common_config/src/common_config/cli/: main.py
common_config/src/common_config/config/: __init__.py  config_manager.py  json_config.py  settings.py
common_config/src/common_config/connectors/: __init__.py  mongodb.py
common_config/src/common_config/db/: connection.py  mongo.py
common_config/src/common_config/export/: data_exporter.py
common_config/src/common_config/extraction/: data_extractor.py
common_config/src/common_config/utils/: __init__.py  exceptions.py  logger.py  security.py
docs/: README.md  (+10 more)
mongo_backup_tools/: .gitignore  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  PHASE5_REQUIREMENTS.md  README.md  TESTING.md  TESTING_STATUS.md  pyproject.toml  run.py
mongo_backup_tools/mongo_backup_tools/: __init__.py  cli.py
mongo_backup_tools/mongo_backup_tools/models/: __init__.py  dump.py  import_opts.py  restore.py
mongo_backup_tools/mongo_backup_tools/orchestrators/: export.py
mongo_backup_tools/src/: cli.py
mongo_backup_tools/src/models/: __init__.py  base.py  dump.py  export.py  import_opts.py  restore.py
mongo_backup_tools/src/mongo_backup_tools/: cli.py
mongo_backup_tools/src/orchestrators/: __init__.py  base.py  dump.py  export.py  import_orch.py  restore.py
mongo_backup_tools/src/utils/: __init__.py  env_loader.py  logging.py  paths.py
mongo_backup_tools/tests/: __init__.py  conftest.py  setup_test_data.py  test_cli.py  test_e2e.py  test_models.py  test_mongo_backup_tools_smoke.py  test_orchestrators.py
(+570 files in other folders)
